Fixed footer so it didnt overlap content

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,9 +4,10 @@
     background-color: #a5a3a3;
     height: 100px;
     padding: 20px 50px;
-    margin-top: 20px;
-    position: sticky;
-    bottom: 0;
+    margin-top: 100px;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
   }
 }
 
@@ -15,4 +16,9 @@
   #footer {
     display: none;
   }
+}
+
+/* SO THE FOOTER DOESNT OVERLAP CONTENT */
+#body {
+  margin-bottom: 150px;
 }
